# teller

./: README.md
newstalk-ai/: .gitignore  KAFKA_CONNECTION_FIX.md  README.md  env.example  pyproject.toml  test_kafka_connection.py
newstalk-ai/.github/workflows/: ci-cd.yml
newstalk-ai/backend/: __init__.py  database_optimizations.sql  pyproject.toml  run_newstalk_test.py  test_complete_workflow.py
newstalk-ai/backend/airflow/dags/: data_preprocessing_dag.py  news_collection_dag.py
newstalk-ai/backend/airflow/plugins/news_operators/: __init__.py  data_validator.py  kafka_publisher.py  langgraph_trigger.py  rss_collector.py
newstalk-ai/backend/api/: main.py
newstalk-ai/backend/api/database/: __init__.py  connection.py
newstalk-ai/backend/api/middleware/: __init__.py  auth.py  monitoring.py  rate_limiter.py
newstalk-ai/backend/api/routes/: __init__.py  ai.py  health.py  monitoring.py  news.py  streaming.py  users.py
newstalk-ai/backend/api/utils/: database.py  fact_verification.py  kafka_client.py  langfuse_client.py  prometheus_metrics.py  redis_client.py  slack_notifier.py
newstalk-ai/backend/infrastructure/docker/: requirements-airflow.txt
newstalk-ai/backend/langgraph/agents/: analysis_agent.py  personalization_agent.py  voice_synthesis_agent.py
newstalk-ai/backend/langgraph/graphs/: news_processing_graph.py
newstalk-ai/backend/langgraph/state/: news_state.py
newstalk-ai/backend/langgraph/tools/: preference_learner.py
newstalk-ai/backend/services/: __init__.py  content_quality_analyzer.py  fact_verification_service.py  news_aggregation_service.py
newstalk-ai/backend/shared/config/: settings.py
newstalk-ai/backend/shared/utils/: async_utils.py  data_quality.py  database_optimizer.py  exceptions.py  state_manager.py
newstalk-ai/backend/tests/: conftest.py  pytest.ini
newstalk-ai/backend/tests/e2e/: test_complete_pipeline.py
newstalk-ai/backend/tests/integration/: test_airflow_langgraph_integration.py
newstalk-ai/backend/tests/performance/: __init__.py  test_load_testing.py  test_performance.py
newstalk-ai/backend/tests/quality/: test_quality_verification.py
newstalk-ai/backend/tests/unit/: test_fact_checker.py
newstalk-ai/docs/: stage10-production-deployment.md  stage8-deployment.md  stage9-testing-quality-assurance.md
newstalk-ai/infrastructure/cloudflare/: cdn-config.yaml
newstalk-ai/infrastructure/docker/: Dockerfile.airflow  Dockerfile.backend  Dockerfile.langgraph  Dockerfile.stream-processor  docker-compose.yml
newstalk-ai/infrastructure/k8s/: airflow-deployment.yaml  backend-deployment.yaml  configmap.yaml  ingress.yaml  kafka-deployment.yaml  namespace.yaml  postgres-deployment.yaml  redis-deployment.yaml
newstalk-ai/infrastructure/kubernetes/: backend-deployment.yaml  namespace.yaml  services.yaml
newstalk-ai/infrastructure/monitoring/: alert_rules.yml  grafana-dashboard.json  prometheus.yml
newstalk-ai/infrastructure/terraform/: main.tf
newstalk-ai/mobile-app/: App.tsx  README.md  app.json  eas.json  package-lock.json  package.json  tsconfig.json
newstalk-ai/mobile-app/src/components/: AccessibilityProvider.tsx  CategoryFilter.tsx  EmptyState.tsx  LoadingOverlay.tsx  NewsCard.tsx
newstalk-ai/mobile-app/src/screens/: HomeScreen.tsx  LoginScreen.tsx  PlayerScreen.tsx  ProfileScreen.tsx  SettingsScreen.tsx
newstalk-ai/mobile-app/src/services/: audioService.ts  notificationService.ts  playbackService.js
newstalk-ai/mobile-app/src/store/: authStore.ts  newsStore.ts  optimizedNewsStore.ts  themeStore.ts
newstalk-ai/mobile-app/src/theme/: theme.ts
newstalk-ai/mobile-app/tests/: test_mobile_app.py
newstalk-ai/scripts/: build.sh  deploy-production.sh  deploy-stage6.sh  deploy.sh  performance-optimization.sh  production-checklist.sh  run-tests.sh
